public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/1178/source/compile
source.c: In function ‘main’:
source.c:9:15: error: expected ‘)’ before ‘a’
  printf("%d\n"a-b);
               ^
source.c:10:15: error: expected ‘)’ before ‘a’
  printf("%d\n"a*b);
               ^
